# serbase

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  main.tsx  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: android_foreground.rs  commands.rs  lib.rs  main.rs  tray.rs
src-tauri/src/engines/: mod.rs  mongo.rs  postgres.rs  redis.rs
src/components/Common/: EmptyState.tsx  StatusBadge.tsx
src/components/Database/: DataBrowser.tsx  DatabaseTerminal.tsx  InstanceToolbar.tsx  LogViewer.tsx
src/components/Layout/: AppLayout.tsx  DatabaseSidebar.tsx  InstancePanel.tsx
src/database/: index.ts  types.ts
src/store/: database-store.ts
