[package]
name = "serbase"
version = "0.1.0"
edition = "2021"

[lib]
name = "serbase_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
bytes = "1"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
rusqlite = { version = "0.31", features = ["bundled"] }
bson = { version = "2", features = ["chrono-0_4"] }
chrono = "0.4"
image = "0.25"
tauri-plugin-store = "2.4.3"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
